Simplify the list of urls when needed (moving, trashing, deleting). I am okay with a method renaming.

BUG: 168691
BUG: 168427
CCMAIL: peter.penz@gmx.at
CCMAIL: faure@kde.org

svn path=/trunk/KDE/kdebase/apps/; revision=846100